package com.elevator;

public interface Button {
    void onClick();
}