package com.elevator;

public enum Direction {
    UP,
    DOWN,
    NONE
}