package com.elevator;

public enum ElevatorState {
    IDLE,
    MOVING_UP,
    MOVING_DOWN,
    DOORS_OPEN,
    MAINTENANCE,
    OVERLOADED
}