package com.elevator;

public interface IObserver {
    void onSensorTriggered(SensorEvent event);
}