package com.elevator;

public enum SensorType {
    WEIGHT,
    POSITION,
    DOOR_OBSTRUCTION
}